--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "version": "0.0.0",
   "description": "A React application using a GraphQL API and Prisma (PostgreSQL) on the backend.",
   "type": "module",
-  "scripts": {},
+  "scripts": {
+      "dev": "ts-node-dev src/index.ts"
+  },
   "devDependencies": {
     "@types/node": "^18.11.18",
     "ts-node-dev": "^2.0.0",
