--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,11 @@
   "description": "A React application using a GraphQL API and Prisma (PostgreSQL) on the backend.",
   "type": "module",
   "scripts": {
-      "dev": "ts-node-esm src/index.ts"
+    "dev": "ts-node-esm src/index.ts"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
+    "prisma": "^4.8.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   }
