--- a/server/package.json
+++ b/server/package.json
@@ -15,5 +15,8 @@
   },
   "dependencies": {
     "@prisma/client": "^4.8.1"
+  },
+  "prisma": {
+      "seed": "ts-node-esm prisma/seed.ts"
   }
 }
