--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,11 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@prisma/client": "^4.8.1"
+    "@prisma/client": "^4.8.1",
+    "graphql": "^16.6.0",
+    "graphql-yoga": "3.3.0"
   },
   "prisma": {
-      "seed": "ts-node-esm prisma/seed.ts"
+    "seed": "ts-node-esm prisma/seed.ts"
   }
 }
