--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@graphql-tools/schema": "^9.0.12",
     "@prisma/client": "^4.8.1",
     "graphql": "^16.6.0",
     "graphql-yoga": "3.3.0"
