--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,10 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@graphql-tools/schema": "^9.0.12",
+    "@apollo/server": "^4.3.0",
     "@prisma/client": "^4.8.1",
     "graphql": "^16.6.0",
-    "graphql-yoga": "3.3.0"
+    "nexus": "^1.3.0"
   },
   "prisma": {
     "seed": "ts-node-esm prisma/seed.ts"
