--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
   "description": "A React application using a GraphQL API and Prisma (PostgreSQL) on the backend.",
   "type": "module",
   "scripts": {
-    "dev": "ts-node-esm src/index.ts"
+    "dev": "ts-node-esm --transpile-only src/index.ts",
+    "compile": "tsc",
+    "start": "npm run compile && node ./dist/index.js"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
