--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,24 +1,16 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "useDefineForClassFields": true,
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "allowJs": false,
-    "skipLibCheck": true,
-    "esModuleInterop": false,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+      "target": "es2017",
+      "module": "esnext",
+      "lib": ["es2020"],
+      "moduleResolution": "node",
+      "esModuleInterop": true,
+      "types": ["node"],
+      "rootDirs": ["src"],
+      "outDir": "dist"
   },
   "ts-node": {
       "esm": true
   },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src"]
 }
