--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "ts-node-esm --transpile-only src/index.ts",
-    "compile": "tsc",
-    "start": "npm run compile && node ./dist/index.js"
+    "compile": "tsc"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
