--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,12 @@
   "description": "A React application using a GraphQL API and Prisma (PostgreSQL) on the backend.",
   "type": "module",
   "scripts": {
-    "dev": "ts-node-esm --transpile-only src/index.ts",
+    "dev": "nodemon --watch \"src\/**\" --ext \"ts,json\" --ignore \"src\/**\/*.spec.ts\" --exec \"ts-node-esm src\/index.ts\"",
     "compile": "tsc"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
+    "nodemon": "^2.0.20",
     "prisma": "^4.8.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
