--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,19 @@
   "description": "A React application using a GraphQL API and Prisma (PostgreSQL) on the backend.",
   "type": "module",
   "scripts": {
-    "dev": "nodemon --watch \"src\/**\" --ext \"ts,json\" --ignore \"src\/**\/*.spec.ts\" --exec \"ts-node-esm src\/index.ts\"",
-    "compile": "tsc"
+    "dev": "nodemon --watch \"src/**\" --ext \"ts,json\" --ignore \"src/**/*.spec.ts\" --exec \"ts-node-esm --transpile-only src/index.ts\"",
+    "compile": "tsc",
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.5",
     "@types/node": "^18.11.18",
+    "get-port": "^5.1.1",
+    "graphql-request": "^5.1.0",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20",
     "prisma": "^4.8.1",
+    "ts-jest": "^29.0.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   },
@@ -23,5 +29,14 @@
   },
   "prisma": {
     "seed": "ts-node-esm prisma/seed.ts"
+  },
+  "jest": {
+      "preset": "ts-jest",
+      "globals": {
+          "ts-jest": {
+              "diagnostics": { "warnOnly": true }
+          }
+      },
+      "testEnvironment": "node"
   }
 }
